notif comprador ok
